--- a/about.html
+++ b/about.html
@@ -19,8 +19,10 @@
     </header>
     <section class="about">
         <h1>About Me</h1>
-        <img src="images/profile.jpg" alt="Profile Picture">
-        <p>Hello! I'm Prabin Thapa, a passionate web developer with a love for creating dynamic and user-friendly websites. Welcome to my portfolio.</p>
+        <img src="Prabin.JPG" alt="Profile Picture">
+        <p>Hello! I'm Prabin Thapa, I’m aspiring data scientist who loves anticipating facts from datasets. I have strong technical skills particularly in mathematics, statistics and Python. 
+
+            I have a passion for devising original algorithms to address business challenges and effectively conveying intricate concepts to stakeholders in the business realm. Welcome to my Portfolio website.</p>
     </section>
     <footer>
         <p>&copy; 2024 My Portfolio</p>
