--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
         <div class="project">
             <img src="images/project1.jpg" alt="Project 1">
             <h2>Project 1</h2>
-            <p>Description of project 1.</p>
+            <p>This project involves building recommendation system. First it started with clustering the data.</p>
         </div>
         <div class="project">
             <img src="images/project2.jpg" alt="Project 2">
