--- a/portfolio.html
+++ b/portfolio.html
@@ -3,35 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
+    <div class="sidebar">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="portfolio.html" class="active">Portfolio</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-    </header>
-    <section class="portfolio">
-        <h1>My Projects</h1>
-        <div class="project">
-            <img src="images/project1.jpg" alt="Project 1">
-            <h2>Project 1</h2>
-            <p>This project involves building recommendation system. First it started with clustering the data.</p>
-        </div>
-        <div class="project">
-            <img src="images/project2.jpg" alt="Project 2">
-            <h2>Project 2</h2>
-            <p>Description of project 2.</p>
-        </div>
-    </section>
-    <footer>
-        <p>&copy; 2024 My Portfolio</p>
-    </footer>
+        <footer>
+            <p>&copy; 2024 My Portfolio</p>
+        </footer>
+    </div>
+    <div class="main-content">
+        <section class="portfolio">
+            <h1>Portfolio</h1>
+            <div class="project">
+                <img src="images/project1.jpg" alt="Project 1">
+                <h2>Project 1</h2>
+                <p>Description of Project 1</p>
+            </div>
+            <div class="project">
+                <img src="images/project2.jpg" alt="Project 2">
+                <h2>Project 2</h2>
+                <p>Description of Project 2</p>
+            </div>
+            <!-- Add more projects as needed -->
+        </section>
+    </div>
 </body>
 </html>
