--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
+    <div class="sidebar">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -17,31 +17,26 @@
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
         </nav>
-    </header>
-    <div class="sidebar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html" class="active">Contact</a></li>
-        </ul>
+        <footer>
+            <p>&copy; 2024 My Portfolio</p>
+        </footer>
     </div>
     <div class="main-content">
         <section class="contact">
             <h1>Contact Me</h1>
-            <form id="contact-form">
-                <label for="name">Name:</label>
+            <form action="#" method="post">
+                <label for="name">Name</label>
                 <input type="text" id="name" name="name" required>
-                <label for="email">Email:</label>
+
+                <label for="email">Email</label>
                 <input type="email" id="email" name="email" required>
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" required></textarea>
+
+                <label for="message">Message</label>
+                <textarea id="message" name="message" rows="5" required></textarea>
+
                 <button type="submit">Send</button>
             </form>
         </section>
     </div>
-    <footer>
-        <p>&copy; 2024 My Portfolio</p>
-    </footer>
-    <script src
+</body>
+</html>
