--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
+    <div class="sidebar">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -17,24 +17,18 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-    </header>
-    <div class="sidebar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="resume.html" class="active">Resume</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+        <footer>
+            <p>&copy; 2024 My Portfolio</p>
+        </footer>
     </div>
     <div class="main-content">
         <section class="resume">
             <h1>Resume</h1>
-            <p>Include your resume content here...</p>
+            <h2>Education</h2>
+            <p>[Your education details]</p>
+            <h2>Experience</h2>
+            <p>[Your experience details]</p>
         </section>
     </div>
-    <footer>
-        <p>&copy; 2024 My Portfolio</p>
-    </footer>
 </body>
 </html>
